Spacing fixes

--- a/sweep_chat/app/globals.css
+++ b/sweep_chat/app/globals.css
@@ -77,8 +77,8 @@
 
 .reactMarkdown {
 
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 
   pre {
     padding-top: 0.5rem;
